# iosvc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  main_client.cpp  udp_session.cpp  udp_session.h
client/: CMakeLists.txt  client_dat.cpp  client_dat.h  crc16.c  crc16.h  dummy_client.cpp  dummy_client.h  iot_client_session.cpp  iot_client_session.h  main.cpp  mycrypto.cpp  mycrypto.h
